[feat] email login impl
